# template-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  index.md  pyproject.toml
.configs/: database.yaml
.github/workflows/: ci.yaml  test.yaml
core/: abstract.py  dependency_injection.py  message_bus.py  messages.py  models.py  unit_of_work.py
core/adapters/: sqlalchemy_adapter.py
src/: bootstrap.py  orm.py  settings.py  views.py
src/domain/: commands.py  events.py  models.py
src/entrypoints/: app.py  bus.py  depends.py  schemas.py
src/service_layer/: handlers.py
template_service/: bootstrap.py  main.py  views.py
template_service/adapters/: orm.py
template_service/domain/: commands.py  events.py
template_service/domain/models/: __init__.py  otp.py  password_reset.py  user.py
template_service/entrypoints/rest/: app.py
template_service/entrypoints/rest/routers/: __init__.py  bus.py  index.py  login.py  register.py
template_service/service_layer/handlers/: command.py  event.py
tests/: confest.py  conftest.py
tests/e2e/: test_api.py
user_service/: bootstrap.py  main.py  views.py
user_service/adapters/: orm.py
user_service/domain/: commands.py
user_service/domain/models/: otp.py  password_reset.py  social_media.py  token.py  user.py
user_service/entrypoints/rest/: app.py  schemas.py
user_service/entrypoints/rest/routers/: __init__.py  bus.py  login.py  register.py
user_service/service_layer/handlers/: command.py  event.py
